# go-go-tunnel

./: .gitignore  .gitmodules  README.md  bridge.c  go.mod  go.sum  main.go  manager_desktop.go  manager_mobile.go  trusttunnel_manager.go
.github/workflows/: build-android.yml  build-bridge.yml  build-desktop-static.yml  build-desktop.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-mobile-static.yml  build-mobile.yml  build-windows.yml  update-static-libs.yml
dobby_bridge/: CMakeLists.txt  dobby_bridge.cpp  dobby_bridge.h  dobby_bridge_android.cpp  dobby_bridge_common.h  dobby_bridge_ios.mm  dobby_bridge_unix.cpp  dobby_bridge_windows.cpp
examples/: example.go  examples  go.mod  go.sum
lib/windows/: dobby_bridge.lib
log/: logger.go
logger/: logger.go
manager/: bridge.c  cgo_dynamic.go  cgo_static.go  trusttunnel_manager.go  trusttunnel_manager_test.go
routing/: routing_linux.go  routing_macos.go  routing_windows.go
scripts/: bootstrap_conan_deps_wrapper.py
trusttunnel/: manager_mobile.go  manager_trusttunnel.go
trusttunnel/dobby_bridge/: CMakeLists.txt  dobby_bridge.cpp
tunnel/: tunnel.go
tunnel/internal/: adaptor_default.go  adaptor_ios.go
